# guile-databuf

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
databuf/: Makefile.am  Makefile.in  databuf.c  databuf.scm
m4/: guile.m4
